--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "src/app.ts",
   "license": "MIT",
   "scripts": {
-    "start:dev": "NODE_ENV=development nodemon",
+    "start:dev": "nodemon",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "prettier": "prettier --parser typescript"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -18,6 +19,8 @@
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
@@ -26,8 +29,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.0.0"
+    "tsconfig-paths": "^4.0.0",
+    "webpack": "^5.73.0"
   }
 }
