--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "src/app.ts",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "start": "ts-node src/app.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register src/app.ts",
     "watch": "tsc -w",
     "prettier": "prettier --parser typescript"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^5.2.3",
+    "@mikro-orm/core": "^5.2.3",
+    "@mikro-orm/postgresql": "^5.2.3",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.1",
     "bcrypt": "^5.0.1",
@@ -22,7 +25,6 @@
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "typedi": "^0.10.0",
-    "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
@@ -34,5 +36,12 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "webpack": "^5.73.0"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
