--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "dist",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -23,7 +23,7 @@
     "esModuleInterop": true,
     "typeRoots": ["node_modules/@types"],
     "paths": {
-      "@/*": ["*"],
+      "@/*": ["src/*"],
       "@config": ["config"]
     }
   },
