--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@mikro-orm/cli": "^5.2.3",
     "@mikro-orm/core": "^5.2.3",
+    "@mikro-orm/migrations": "^5.2.3",
     "@mikro-orm/postgresql": "^5.2.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.1",
     "bcrypt": "^5.0.1",
