--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/app.ts",
     "start:dev": "ts-node-dev -r tsconfig-paths/register src/app.ts",
+    "build": "tsc",
     "watch": "tsc -w",
     "prettier": "prettier --parser typescript"
   },
